--- a/Resume_Analysis/Resume_Analysis.Rmd
+++ b/Resume_Analysis/Resume_Analysis.Rmd
@@ -1,8 +1,11 @@
 ---
 title: "Resume_analysis"
 output:
-  word_document: default
+  pdf_document: default
   html_notebook: default
+  html_document:
+    df_print: paged
+  word_document: default
 ---
 
 ```{R, echo=FALSE, message=FALSE, warning=FALSE}
@@ -14,7 +17,11 @@ library(ggplot2)
 ```
 
 ```{R}
-FILENAME <- paste(getwd(), "/2019_last.docx", sep="")
+#CV <- "2019_last.docx"
+#LANGUE <- "en"
+CV <- "ébauche_v5.docx"
+LANGUE <- "fr"
+FILENAME <- paste(getwd(), "/", CV, sep="")
 ```
 
 ```{R, echo=FALSE}
@@ -27,7 +34,8 @@ text_mining_df <- text_df %>%
 ```
 
 ```{R, echo=FALSE}
-data(stop_words)
+#data(stop_words)
+stop_words <- get_stopwords(language = LANGUE)
 
 tidy_text_mining_df <- text_mining_df %>%
   anti_join(stop_words)
@@ -39,12 +47,12 @@ tidy_text_mining_df %>%
   with(wordcloud(word, n, max.words = 100))
 ```
 
-Filtre des occurences > 5
+Filtre des occurences > $`r N <- 3; N`$
 
 ```{R, echo=FALSE}
 tidy_text_mining_df %>%
   count(word, sort = TRUE) %>%
-  filter(n > 5) %>%
+  filter(n > N) %>%
   mutate(word = reorder(word, n)) %>%
   ggplot(aes(word, n)) +
   geom_col() +
